# google-ads-metrics

./: .gitignore  README.md  ads_metrics.csv  manage.py  pyproject.toml
ad_metrics/: asgi.py  settings.py  urls.py  wsgi.py
ads/: ad_metrics_helper.py  admin.py  google_ads_client.py  models.py  views.py
ads/management/commands/: bq_datastore_import.py  csv_dataset_upload.py
ads/migrations/: 0001_initial.py  0002_googleads.py  0003_googleads_is_uploaded_to_google.py  0004_alter_googleads_clicks_alter_googleads_cost_and_more.py
